Stop section numbers wrapping

--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -159,6 +159,7 @@ html {
       width: $margin*0.75;
       text-align: right;
       color: $grey-2;
+      white-space: nowrap;
 
       @media (max-width: 640px) {
         margin-left: 0;
